# zamerov-lk

./: .gitignore
backend/: .env.local  .gitignore  alembic.ini  docker-compose.yml  pyproject.toml
backend/docker/: Dockerfile
backend/migrations/: env.py
backend/migrations/versions/: 0ca2582b1271_init.py  1df206bcdd91_add_user_task_type_access.py  2025_05_22_roles_data_migration.py  2025_05_29_-12b3c2b00836_add_requests_and_services.py  2025_05_29_add_requests_and_services.py  2025_06_08_add_requests_and_services.py  2025_07_06_add_order_table.py  2025_07_13_add_timestamps_and_order_services.py  2025_08_30_add_order_photos.py  2025_11_30_add_client_info_in_request_table.py  a1e9a68d77a4_roles_data_migration.py  be1eb9cf43f2_init.py  e597ad0fd861_roles_data_migration.py
backend/src/: main.py
backend/src/api/: auth.py  dependencies.py  order.py  request.py  requests.py  s3.py  schemas.py  service.py
backend/src/api/dependencies/: auth.py  order.py  request.py  s3.py  service.py
backend/src/api/schemas/: __init__.py  auth.py  order.py  photo.py  request.py  service.py
backend/src/domain/: __init__.py  base.py  models.py
backend/src/domain/choices/: __init__.py  role.py  status.py
backend/src/domain/models/: __init__.py  mixins.py  order.py  photo.py  request.py  service.py  services.py  users.py
backend/src/service/: auth.py  exceptions.py  order.py  request.py  s3.py  service.py  user.py
backend/src/settings/: config.py
backend/src/utils/: middleware.py  password.py
backend/tests/: conftest.py  test_auth.py  test_services.py
(+48 files in other folders)
